# nodegraph

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
examples/: machine.rs
src/: error.rs  graph.rs  lib.rs
